@@ -7,4 +7,7 @@ heapAddressSanitize <- function(x=10) {
     .Call("heapAddressSanitize", x, PACKAGE="sanitizers")
 }
 
+intOverflowSanitize <- function(x=31) {
+    .Call("intOverflow", x, PACKAGE="sanitizers")
+}
 
