@@ -1,0 +1,3 @@
+
+library(sanitizers)
+intOverflowSanitize(31)
